--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -17,14 +17,29 @@ data$date <- as.Date(data$date)
 ## What is mean total number of steps taken per day?
 ```{r}
 steps_per_day <- aggregate(x = data$steps, by = list(data$date), FUN=sum)
-hist(steps_per_day$x)
+hist(steps_per_day$x, main="Histogram of steps per day", xlab="steps")
 ```
 
+Mean steps per day:
+```{r}
+mean(steps_per_day$x, na.rm = TRUE)
+```
 
+Median steps per day:
+```{r}
+median(steps_per_day$x, na.rm = TRUE)
+```
 
 ## What is the average daily activity pattern?
+```{r}
+mean_activity <- aggregate(x = data$steps, by = list(data$interval), FUN=function(x) mean(x, na.rm = TRUE))
+with(mean_activity, plot(x ~ Group.1, type='l'))
+```
 
-
+Which 5-minute interval has the highest average number of steps?
+```{r}
+mean_activity[which.max(mean_activity$x),'Group.1']
+```
 
 ## Imputing missing values
 
